// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField Snapshots grow 1`] = `
.emotion-2 {
  margin-bottom: 16px;
}

.emotion-0 {
  display: block;
}

<div
  className="emotion-2 emotion-3"
>
  <div
    className="emotion-0 emotion-1"
  >
    <input
      type="text"
    />
  </div>
</div>
`;

exports[`FormField Snapshots grow with left label 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 24px;
}

.emotion-0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
  className="emotion-2 emotion-3"
>
  <div
    className="emotion-0 emotion-1"
  >
    <input
      type="text"
    />
  </div>
</div>
`;

exports[`FormField Snapshots renders as expected 1`] = `
.emotion-2 {
  margin-bottom: 16px;
}

.emotion-0 {
  display: inline-block;
}

<div
  className="emotion-2 emotion-3"
>
  <div
    className="emotion-0 emotion-1"
  >
    <input
      type="text"
    />
  </div>
</div>
`;
